fix: duplicate declarations in lunatic pairwise component